# ffclipper

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
src/ffclipper/: __init__.py  cli.py
src/ffclipper/backend/: __init__.py  executor.py
src/ffclipper/backend/builder/: __init__.py  audio.py  command_args.py  command_builder.py  mux.py  stream_args.py  subs.py  trim.py  video.py
src/ffclipper/gui/: __init__.py  controller.py  declarative_ui.py  icon.py  main_window.py  ui_helpers.py
src/ffclipper/models/: __init__.py  annotations.py  context.py  ffprobe.py  plan.py  types.py  verbosity.py
src/ffclipper/models/options/: __init__.py  audio.py  defaults.py  groups.py  options.py  runtime.py  subtitles.py  time.py  video.py
src/ffclipper/tools/: __init__.py  capabilities.py  cli.py  helpers.py  probe.py
tests/: __init__.py  conftest.py  test_audio_stream_copy.py  test_builder.py  test_capabilities.py  test_cli.py  test_cli_help.py  test_executor.py  test_gui_thread.py  test_open_directory.py  test_options.py  test_source_url.py  test_subtitle_burn_method.py  test_subtitle_range.py  test_tools_probe.py  test_version.py  test_video_builder.py  test_video_stream_copy.py
